# packages

./: .gitignore  book
Auto_Auth/libhttpd/: Makefile  api.c  ip_acl.c  protocol.c
Auto_Auth/src/: Makefile  auto.c  gethttp.c  set_arp  test.sh  user
Traffic_Control/: Makefile  mtc  tc_test.c  traffic_control.c  traffic_control.h  util.c  util.h
automakeExample/: Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
automakeExample/autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2  traces.3
automakeExample/include/: stamp-h1  test.h  test.h.in
automakeExample/src/: test.c
bashrc/: bashrc
beacon/: Makefile
beacon/files/: wds-son
client_server_exercise/HotDog/: .project  AndroidManifest.xml
client_server_exercise/wifidog_ser/: data.txt  send_thread.c  send_thread.h  service.c  service.h
client_server_exercise/wifidog_ser/iptables/: clear_iptables.sh  set_iptables.sh
esp32_wifi/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
esp32_wifi/esp_config/: Makefile  Makefile.am  broadcast_test.c  config.h  config.status  configfile  configure.ac  esp_config.c  esp_config.h  ipfile
esp32_wifi/main/: CMakeLists.txt  Kconfig  battery_check.c  battery_check.h  component.mk  config_task.c  config_task.h  main.c  main.h  modbus_tcp.c  modbus_tcp.h
esp32_wifi/main/ulp/: pulse_cnt.S  pulse_cnt.S1
esp_control/: Makefile
esp_control/main/: user_main.c
esp_uart/: Makefile  sdkconfig
esp_uart/main/: user_main.c
esp_wifi/: Makefile
esp_wifi/main/: modbus_tcp.h  user_main.c
git_config/: git_init.sh
pcap_al/: .gitignore  Makefile  list.h  nattable  read_pcap.c  read_pcap.h  xmlwrite.c
pcap_al/lib/: libxml2.la  xml2Conf.sh
pcap_al/lib/pkgconfig/: libxml-2.0.pc
programme_ex/: daemon.c  test.c
roaming/: .gitignore  Makefile
roaming/src/kmod_roaming/: Makefile  zyc_backport.h  zyc_roaming.c  zyc_roaming.h
scripts/: tag
tmux/: tmux.conf
tools/: Makefile  clear_iptables.c  hotplug-monitor.c  strtoip  strtoip.c
userful_config/: wpa_supplicant.conf
vimconfig/: README  install.sh  vimrc.conf
(+37 files in other folders)
