#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([helloworld], [1.0], [xbin@163.com])

AM_INIT_AUTOMAKE([subdir-objects])
#AM_INIT_AUTOMAKE([foreign -Wall -Werror subdir-objects])

AC_CONFIG_SRCDIR([src/test.c])
AC_CONFIG_HEADERS([include/test.h])

# Checks for programs.
# AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
